Archive2/42/ce9890d86c123e/output
main.cpp: In function 'int main()':
main.cpp:24:10: error: use of deleted function 'Item& Item::operator=(const Item&&)'
     item = std::move(item2); // misleading
          ^
main.cpp:16:11: note: declared here
     Item& operator=(const Item&&) = delete;
           ^
